--- a/camera/src/renderer/src/assets/css/global.scss
+++ b/camera/src/renderer/src/assets/css/global.scss
@@ -4,8 +4,10 @@
   box-sizing: border-box;
 }
 
-html {
+html, body {
   // -webkit-app-region: drag;
+
+  background: transparent !important;
 }
 textarea {
   // -webkit-app-region: no-drag;
