--- a/snippets/src/renderer/src/components/Result/index.scss
+++ b/snippets/src/renderer/src/components/Result/index.scss
@@ -2,8 +2,26 @@
   @apply py-3 bg-slate-50 px-3 rounded-bl-lg rounded-br-lg -mt-[10px];
 }
 .result-item {
-  @apply p-1 mb-2 text-sm truncate rounded-sm text-slate-700 bg-slate-200;
+  @apply relative p-1 mb-2 text-sm truncate rounded-sm text-slate-700 bg-slate-200;
   &.active {
     @apply bg-orange-300 text-white
   }
 }
+
+@keyframes heartbeat {
+  from {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+    opacity: .5;
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+.highlighted {
+  animation: heartbeat .5s;
+}
+
