片断：添加鼠标双击选择列表项效果

--- a/snippets/src/renderer/src/components/Result/index.scss
+++ b/snippets/src/renderer/src/components/Result/index.scss
@@ -2,7 +2,7 @@
   @apply py-3 bg-slate-50 px-3 rounded-bl-lg rounded-br-lg -mt-[10px];
 }
 .result-item {
-  @apply relative p-1 mb-2 text-sm truncate rounded-sm text-slate-700 bg-slate-200;
+  @apply relative p-1 mb-2 text-sm truncate rounded-sm text-slate-700 bg-slate-200 cursor-pointer;
   &.active {
     @apply bg-orange-300 text-white
   }
@@ -13,7 +13,7 @@
     transform: scale(1);
   }
   50% {
-    transform: scale(1.3);
+    transform: scale(1.1);
     opacity: .5;
   }
   to {
