--- a/snippets/src/renderer/src/pages/category/index.scss
+++ b/snippets/src/renderer/src/pages/category/index.scss
@@ -2,19 +2,28 @@
   display: grid;
   grid-template:
     "categories content" auto
-    "nav content" 30px/120px auto;
-  gap: 1px;
-  @apply h-screen bg-gray-200;
+    "nav content" 30px/140px auto;
+    gap: 4px;
+  @apply h-full bg-red-200;
   .categories {
-    @apply px-2 h-full bg-gray-100 text-xs text-slate-700 overflow-y-auto;
+    @apply px-2 h-full text-xs bg-slate-300 text-slate-700 overflow-y-auto ;
     grid-area: categories;
     .item {
-      @apply  mb-1 py-1 px-2 truncate block cursor-pointer rounded-md;
+      @apply flex items-center mb-1 py-1 px-2 truncate cursor-pointer rounded-md;
       &:hover {
         @apply bg-blue-500  text-white;
+        span {
+          @apply  text-white;
+        }
       }
       &.active {
         @apply bg-blue-600 text-white;
+        span {
+          @apply  text-white;
+        }
+      }
+      span {
+        @apply mr-2;
       }
     }
   }
