--- a/snippets/src/renderer/src/pages/content-list/index.scss
+++ b/snippets/src/renderer/src/pages/content-list/index.scss
@@ -1,11 +1,18 @@
-.content-page {
-  @apply  w-screen h-screen bg-gray-100;
+.content-list-page {
+  @apply  w-screen h-screen bg-red-200 ;
   display: grid;
-  grid-template: 'list content' auto / 150px auto;
-  gap: 1px;
+  grid-template: 'list content' auto / 200px auto;
+  gap: 4px;
   .list {
     grid-area: list;
-    @apply bg-slate-50;
+    @apply flex flex-col px-1 bg-slate-200;
+    .item {
+      @apply px-1 py-1 rounded text-xs flex justify-between;
+
+    }
+    .active {
+      @apply bg-blue-600 text-white;
+    }
   }
   .content {
     grid-area: content;
