--- a/snippets/src/renderer/src/pages/content/index.scss
+++ b/snippets/src/renderer/src/pages/content/index.scss
@@ -1,3 +1,9 @@
 .content-page {
   @apply flex flex-col py-4 px-4 h-full bg-white;
+  h1 {
+    @apply text-base font-bold text-slate-600 opacity-95;
+  }
+  .content {
+    @apply text-sm text-slate-500 opacity-95 leading-relaxed;
+  }
 }
