--- a/snippets/src/renderer/src/pages/content/index.scss
+++ b/snippets/src/renderer/src/pages/content/index.scss
@@ -1,9 +1,12 @@
 .content-page {
-  @apply flex flex-col py-4 px-4 h-full bg-white  overflow-y-scroll ;
-  h1 {
-    @apply text-base font-bold text-slate-600 opacity-95;
+  @apply flex flex-col py-4 px-4 h-full bg-white  ;
+  input {
+    @apply text-xl font-bold text-slate-600 opacity-95;
   }
-  .content {
-    @apply text-sm text-slate-500 opacity-95 leading-relaxed;
+  textarea {
+    @apply flex-1 text-sm text-slate-500 opacity-95 leading-relaxed;
+  }
+  button {
+    @apply self-end w-24;
   }
 }
