--- a/snippets/src/renderer/src/pages/category/index.scss
+++ b/snippets/src/renderer/src/pages/category/index.scss
@@ -6,8 +6,11 @@
   gap: 1px;
   @apply bg-slate-300;
   .categories {
-    @apply p-2 text-xs bg-slate-300 text-slate-700 overflow-y-scroll;
+    @apply p-2 text-xs bg-slate-300 text-slate-700;
     grid-area: categories;
+    .list-box {
+      @apply overflow-auto h-full;
+    }
     .item {
       @apply flex items-center mb-1 py-1 px-2 w-full truncate cursor-pointer rounded-md;
       &:hover {
