--- a/snippets/src/renderer/src/pages/content-list/index.scss
+++ b/snippets/src/renderer/src/pages/content-list/index.scss
@@ -7,7 +7,7 @@
     grid-area: list;
     @apply flex flex-col px-1 py-2 bg-slate-200 overflow-y-scroll;
     .item {
-      @apply px-1 py-1 rounded text-xs flex justify-between;
+      @apply my-1 px-1 py-1 rounded text-xs flex justify-between;
     }
     .active {
       @apply bg-blue-600 text-white;
