片断：添加数据库目录路径相关的逻辑

--- a/snippets/src/renderer/src/pages/setting/index.scss
+++ b/snippets/src/renderer/src/pages/setting/index.scss
@@ -19,6 +19,12 @@
     }
   }
   .shortcut-input {
-    @apply focus:border-orange-300;
+    @apply py-1 px-3 focus:border-orange-300 rounded;
+  }
+  .path-btn {
+    @apply flex items-center;
+    span {
+      @apply ml-1;
+    }
   }
 }
